08.background bg 추가

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main id="main" role="main">
     <!-- intro -->
-    <section id="intro">
+    <section id="intro" data-bg="#3F9BD0">
       <div class="jellyfish_one">
         <img src="./src/assets/images/jellyfish1.png" alt="jellyfish1">
       </div>
@@ -54,7 +54,7 @@
     </section>
 
     <!-- project -->
-    <section id="project">
+    <section id="project" data-bg="#0380C6">
       <div class="jellyfish_two">
         <img src="./src/assets/images/jellyfish2.png" alt="jellyfish2">
       </div>
@@ -117,7 +117,7 @@
     </section>
 
     <!-- work -->
-    <section id="work">
+    <section id="work" data-bg="#046BA9">
       <div class="jellyfish_three">
         <img src="./src/assets/images/jellyfish3.png" alt="jellyfish3">
       </div>
@@ -177,7 +177,7 @@
     </section>
 
     <!-- uxui -->
-    <section id="uxui">
+    <section id="uxui" data-bg="#024A7B">
       <div class="jellyfish_four">
         <img src="./src/assets/images/jellyfish4.png" alt="jellyfish4">
       </div>
@@ -236,7 +236,7 @@
     </section>
 
     <!-- about -->
-    <section id="about">
+    <section id="about" data-bg="#013B67">
       <div class="jellyfish_five">
         <img src="./src/assets/images/jellyfish5.png" alt="jellyfish5">
       </div>
@@ -340,7 +340,7 @@
     </section>
   </main>
 
-  <footer id="footer" role="contentinfo">
+  <footer id="footer" data-bg="#003058" role="contentinfo">
     <!-- <p>전화번호</p>
     <p>주소</p> -->
   </footer>
