--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main id="main" role="main">
     <!-- intro -->
-    <section id="intro" data-bg="#3F9BD0">
+    <section id="intro" data-bg="#47A2D6">
       <div class="jellyfish_one">
         <img src="./src/assets/images/jellyfish1.png" alt="jellyfish1">
       </div>
@@ -55,6 +55,10 @@
 
     <!-- project -->
     <section id="project" data-bg="#0380C6">
+      <div class="title">
+        <h2>project</h2>
+        <p>project 관련 설명</p>
+      </div>
       <div class="jellyfish_two">
         <img src="./src/assets/images/jellyfish2.png" alt="jellyfish2">
       </div>
@@ -117,7 +121,11 @@
     </section>
 
     <!-- work -->
-    <section id="work" data-bg="#046BA9">
+    <section id="work" data-bg="#035E95">
+      <div class="title">
+        <h2>work</h2>
+        <p>work 관련 설명</p>
+      </div>
       <div class="jellyfish_three">
         <img src="./src/assets/images/jellyfish3.png" alt="jellyfish3">
       </div>
@@ -178,6 +186,10 @@
 
     <!-- uxui -->
     <section id="uxui" data-bg="#024A7B">
+      <div class="title">
+        <h2>uxui</h2>
+        <p>uxui 관련 설명</p>
+      </div>
       <div class="jellyfish_four">
         <img src="./src/assets/images/jellyfish4.png" alt="jellyfish4">
       </div>
@@ -237,6 +249,10 @@
 
     <!-- about -->
     <section id="about" data-bg="#013B67">
+      <div class="title">
+        <h2>about</h2>
+        <p>about 관련 설명</p>
+      </div>
       <div class="jellyfish_five">
         <img src="./src/assets/images/jellyfish5.png" alt="jellyfish5">
       </div>
@@ -259,18 +275,27 @@
                   <div class="about_line">
                     <img class="slidelineM" src="./src/assets/images/about-slideline.png" alt="about-slideline">
                   </div>
-                  <ul class="about_sub-title">
+                  <ul class="about_sub-title Iam">
                     <li>
-                      <h2>점점커지는 <span>light</span></h2>
-                      <p>포기하지 않는 태도로 끝까지 해내며, 목표를 향한 꾸준함으로 신뢰를 얻습니다.</p>
+                      <div class="num">
+                        <h2>1</h2>
+                        <h3>점점커지는 <span>light</span></h3>
+                        <p>작은 불빛도 모이면 큰 빛을 만들어내듯, 저는 포기하지 않고 꾸준히 노력하며 신뢰를 쌓아가는 사람입니다.</p>
+                      </div>
                     </li>
                     <li>
-                      <h2>끝이없는 <span>deep sea</span></h2>
-                      <p>철저한 계획 아래 새로운 도전을 즐기며, 안정적인 성과와 성장을 이끕니다.</p>
+                      <div class="num">
+                        <h2>2</h2>
+                        <h3>끝이없는 <span>deep sea</span></h3>
+                        <p>넓고 깊은 바다처럼 무한한 가능성을 탐구하며, 철저한 계획과 도전 정신으로 더 나은 성과를 만들어가고 있습니다.</p>
+                      </div>
                     </li>
                     <li>
-                      <h2>계속되는 <span>grow</span></h2>
-                      <p>배움을 즐기며 끊임없이 성장하고, 자기주도적 학습으로 더 나은 내일을 만듭니다.</p>
+                      <div class="num">
+                        <h2>3</h2>
+                        <h3>계속되는 <span>grow</span></h3>
+                      <p>성장은 멈추지 않는 과정입니다. 저는 배우고 성장하며, 매일 더 나은 내일을 만들어가고자 노력하고 있습니다.</p>
+                      </div>  
                     </li>
                   </ul>
                 </div>
