--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main id="main" role="main">
     <!-- intro -->
     <section id="intro" data-bg="#47A2D6">
-      <div class="jellyfish_one">
+      <div class="jellyfish jellyfish1">
         <img src="./src/assets/images/jellyfish1.png" alt="jellyfish1">
       </div>
       <h2>The <em>G</em>rowth Story of a <em>J</em>ellyfish</h2>
@@ -50,16 +50,17 @@
         <div class="dot"></div>
       </div>
       <p>작은 시작에서 빛나는 성장까지 <br>
-        <em>해파리의 성장 이야기</em>를 소개합니다.</p>
+        <em>해파리의 성장 이야기</em>를 소개합니다.
+      </p>
     </section>
 
     <!-- project -->
     <section id="project" data-bg="#0380C6">
       <div class="title">
         <h2>project</h2>
-        <p>project 관련 설명</p>
+        <p>콘텐츠 기획과 시각적 아이덴티티를 활용하여 제작한 작업물입니다.</p>
       </div>
-      <div class="jellyfish_two">
+      <div class="jellyfish jellyfish2">
         <img src="./src/assets/images/jellyfish2.png" alt="jellyfish2">
       </div>
       <div id="projectSwiper-box">
@@ -124,55 +125,64 @@
     <section id="work" data-bg="#035E95">
       <div class="title">
         <h2>work</h2>
-        <p>work 관련 설명</p>
+        <p>코딩 작업을 통해 기술적 구현을 포함한 다양한 작업물입니다.</p>
       </div>
-      <div class="jellyfish_three">
+      <div class="jellyfish jellyfish3">
         <img src="./src/assets/images/jellyfish3.png" alt="jellyfish3">
       </div>
       <div id="wrokSwiper-box">
         <div class="swiper workSwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
+              <img src="./src/assets/work/work-warnerbro.png" alt="warnerbro">
+              <div class="work_name">
+                <p>01. 워너 브라더스</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="./src/assets/work/work-nintendo.png" alt="nintendo">
+              <div class="work_name">
+                <p>02. 닌텐도</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="./src/assets/work/work-lush.png" alt="lush">
+              <div class="work_name">
+                <p>03. lush</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
             </div>
             <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
             </div>
             <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
             </div>
             <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
             </div>
             <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="work_name">
-                <p>에이스침대</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="work_name">
-                <p>에이스침대</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="work_name">
-                <p>에이스침대</p>
-              </div>
-            </div>
-            <div class="swiper-slide">
+              <img src="./src/assets/work/work-acebed.png" alt="acebed">
               <div class="work_name">
                 <p>에이스침대</p>
               </div>
@@ -187,73 +197,154 @@
     <!-- uxui -->
     <section id="uxui" data-bg="#024A7B">
       <div class="title">
-        <h2>uxui</h2>
-        <p>uxui 관련 설명</p>
+        <h2>graphic design</h2>
+        <p>포토샵과 일러스트를 활용하여 제작한 그래픽디자인입니다.</p>
       </div>
-      <div class="jellyfish_four">
+      <div class="jellyfish jellyfish4">
         <img src="./src/assets/images/jellyfish4.png" alt="jellyfish4">
       </div>
-    <div class="uxui_poster-box">
-      <div class="uxui_poster">
-
-        <div class="uxui_desc">
-          <h2>01</h2>
-          <p class="uxui_name">poster name</p>
-          <p class="uxui_date">2024.06</p>
+      <div class="uxui_poster-container">
+        <div class="uxui_poster-box uxui_poster-box1">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/AI-fleamarket-poster.png" alt="fleamarket-poster"></div>
+            <div class="uxui_desc">
+              <h2>01</h2>
+              <p class="uxui_skill">illustrator</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
         </div>
-      </div>
-      <div class="uxui_poster-title">
-        <p>poster title</p>
-      </div>
-    </div>
-    <div class="uxui_poster-box">
-      <div class="uxui_poster">
-
-        <div class="uxui_desc">
-          <h2>02</h2>
-          <p class="uxui_name">poster name</p>
-          <p class="uxui_date">2024.06</p>
+        <div class="uxui_poster-box uxui_poster-box2">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/PS-sale-cardnews.png" alt="sale-cardnews"></div>
+            <div class="uxui_desc">
+              <h2>02</h2>
+              <p class="uxui_skill">photoshop</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
         </div>
-      </div>
-      <div class="uxui_poster-title">
-        <p>poster title</p>
-      </div>
-    </div>
-    <div class="uxui_poster-box">
-      <div class="uxui_poster">
-
-        <div class="uxui_desc">
-          <h2>03</h2>
-          <p class="uxui_name">poster name</p>
-          <p class="uxui_date">2024.06</p>
+        <div class="uxui_poster-box uxui_poster-box3">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/AI-소모임-cardnews.png" alt="cardnews"></div>
+            <div class="uxui_desc">
+              <h2>03</h2>
+              <p class="uxui_skill">illustrator</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
         </div>
-      </div>
-      <div class="uxui_poster-title">
-        <p>poster title</p>
-      </div>
-    </div>
-    <div class="uxui_poster-box">
-      <div class="uxui_poster">
-
-        <div class="uxui_desc">
-          <h2>04</h2>
-          <p class="uxui_name">poster name</p>
-          <p class="uxui_date">2024.06</p>
+        <div class="uxui_poster-box uxui_poster-box4">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/AI-Aland-poster.png" alt="-Aland-poster"></div>
+            <div class="uxui_desc">
+              <h2>04</h2>
+              <p class="uxui_skill">illustrator</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
         </div>
+        <div class="uxui_poster-box uxui_poster-box5">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/PS-cafe-poster.png" alt="cafe-poster"></div>
+            <div class="uxui_desc">
+              <h2>05</h2>
+              <p class="uxui_skill">photoshop</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+        <div class="uxui_poster-box uxui_poster-box6">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/PS-zero-poster.png" alt="zero-poster"></div>
+            <div class="uxui_desc">
+              <h2>06</h2>
+              <p class="uxui_skill">photoshop</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+        <div class="uxui_poster-box uxui_poster-box7">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/PS-newtro-poster.png" alt="newtro-poster"></div>
+            <div class="uxui_desc">
+              <h2>07</h2>
+              <p class="uxui_skill">photoshop</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+        <div class="uxui_poster-box uxui_poster-box8">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/PS-haribo-poster.png" alt="haribo-poster"></div>
+            <div class="uxui_desc">
+              <h2>08</h2>
+              <p class="uxui_skill">photoshop</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+        <div class="uxui_poster-box uxui_poster-box9">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/AI-festival-poster.png" alt="festival-poster"></div>
+            <div class="uxui_desc">
+              <h2>09</h2>
+              <p class="uxui_skill">illustrator</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+        <div class="uxui_poster-box uxui_poster-box10">
+          <div class="uxui_poster">
+            <div class="uxui_poster-img"><img src="./src/assets/graphic/AI-3d-cardnews.png" alt="3d-cardnews"></div>
+            <div class="uxui_desc">
+              <h2>10</h2>
+              <p class="uxui_skill">illustrator</p>
+              <p class="uxui_date">2024.06</p>
+            </div>
+          </div>
+          <div class="uxui_poster-title">
+            <p>poster title</p>
+          </div>
+        </div>
+  
       </div>
-      <div class="uxui_poster-title">
-        <p>poster title</p>
-      </div>
-    </div>
     </section>
 
     <!-- about -->
     <section id="about" data-bg="#013B67">
       <div class="title">
         <h2>about</h2>
-        <p>about 관련 설명</p>
+        <p>노력과 성장을 통해 매 순간 진화하는 웹퍼블리셔입니다.</p>
       </div>
-      <div class="jellyfish_five">
+      <div class="jellyfish jellyfish5">
         <img src="./src/assets/images/jellyfish5.png" alt="jellyfish5">
       </div>
       <div class="about_left">
@@ -294,8 +385,8 @@
                       <div class="num">
                         <h2>3</h2>
                         <h3>계속되는 <span>grow</span></h3>
-                      <p>성장은 멈추지 않는 과정입니다. 저는 배우고 성장하며, 매일 더 나은 내일을 만들어가고자 노력하고 있습니다.</p>
-                      </div>  
+                        <p>성장은 멈추지 않는 과정입니다. 저는 배우고 성장하며, 매일 더 나은 내일을 만들어가고자 노력하고 있습니다.</p>
+                      </div>
                     </li>
                   </ul>
                 </div>
@@ -370,6 +461,8 @@
     <p>주소</p> -->
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
   <script type="module" src="/main.js"></script>
 </body>
 
