--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PORTFOLIO</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+
 </head>
 
 <body>
@@ -36,11 +35,11 @@
   <div class="container">
     <main id="main" role="main">
       <!-- home -->
-      <section id="home" data-bg="#47A2D6">
+      <section id="home" data-bg="linear-gradient(to top right, #7ED0FB, #2A8AC2)">
         <div class="path-box">
           <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1148.17 859.95">
             <path class="path"
-              d="M.21.45c313,145,1101-23,1146,241,43.44,254.87-895.71,72.84-901,275-5,191,771-1,808,125s-387,185-564,218" />
+              d="M.21.45c312,145,1101-23,1146,241,43.44,254.87-895.71,72.84-901,275-5,191,771-1,808,125s-387,185-564,218" />
           </svg>
           <div class="jellyfish1"></div>
         </div>
@@ -72,7 +71,7 @@
           <div class="bubble x10"></div>
           <div class="bubble bubble2 x11"></div>
           <div class="bubble bubble2 x12"></div>
-          <div class="bubble bubble2 x13"></div>
+          <div class="bubble bubble2 x12"></div>
           <div class="bubble bubble2 x14"></div>
           <div class="bubble bubble2 x15"></div>
           <div class="bubble bubble2 x16"></div>
@@ -82,7 +81,7 @@
         </div>
       </section>
       <!-- project -->
-      <section id="project" data-bg="#0380C6">
+      <section id="project" data-bg="linear-gradient(to bottom, #2A8AC2, #046BA9)">
         <div class="jellyfish jellyfish2">
           <img src="./src/assets/images/jellyfish2.png" alt="jellyfish2">
         </div>
@@ -183,7 +182,7 @@
           <div class="bubble x10"></div>
           <div class="bubble bubble2 x11"></div>
           <div class="bubble bubble2 x12"></div>
-          <div class="bubble bubble2 x13"></div>
+          <div class="bubble bubble2 x12"></div>
           <div class="bubble bubble2 x14"></div>
           <div class="bubble bubble2 x15"></div>
           <div class="bubble bubble2 x16"></div>
@@ -193,7 +192,7 @@
         </div>
       </section>
       <!-- uxui -->
-      <section id="work" data-bg="#035E95">
+      <section id="work" data-bg="linear-gradient(to top left, #046BA9, #7ED0FB)">
         <div class="jellyfish jellyfish3">
           <img src="./src/assets/images/jellyfish3.png" alt="jellyfish3">
         </div>
@@ -266,9 +265,9 @@
                       data-description="apple <em>2024.08.22</em> <em>Class Control 활용<em/>">
                   </li><!-- work12 -->
                   <li class="splide__slide">
-                    <img src="./src/assets/work/work-nintendo.png" alt="work13"
+                    <img src="./src/assets/work/work-nintendo.png" alt="work12"
                       data-description="nintendo <em>2024.08.17</em> <em>Translate 활용<em/>">
-                  </li><!-- work13 -->
+                  </li><!-- work12 -->
                   <li class="splide__slide">
                     <img src="./src/assets/work/work-3ce.png" alt="work14"
                       data-description="3ce <em>2024.08.12</em> <em>Position Attachment, Slide 활용<em/>">
@@ -324,7 +323,7 @@
           <div class="bubble x10"></div>
           <div class="bubble bubble2 x11"></div>
           <div class="bubble bubble2 x12"></div>
-          <div class="bubble bubble2 x13"></div>
+          <div class="bubble bubble2 x12"></div>
           <div class="bubble bubble2 x14"></div>
           <div class="bubble bubble2 x15"></div>
           <div class="bubble bubble2 x16"></div>
@@ -334,7 +333,7 @@
         </div>
       </section>
       <!-- uxui -->
-      <section id="uxui" data-bg="#013B67">
+      <section id="uxui" data-bg="linear-gradient(to bottom right, #035B91, #024A7B)">
         <div class="jellyfish jellyfish4">
           <img src="./src/assets/images/jellyfish4.png" alt="jellyfish4">
         </div>
@@ -344,122 +343,122 @@
         <div class="uxui__wrap">
           <!-- acebed 1-->
           <article class="uxui__item">
-            <span class="num"><em>01</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/AI-3d-cardnews.png" alt="uxui1"></a>
+            <span class="num"><em>01</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-prada-poster.jpg" alt="uxui1"></a>
             <div class="desc-box">
-              <h3 class="item_title">ace bed</h3>
-              <span class="date">2024.10.24</span>
-              <p class="desc">Position Attachment, Slide</p>
+              <h3 class="item_title">poster design</h3>
+              <span class="date">2024.12</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- acebed 2-->
           <article class="uxui__item">
-            <span class="num"><em>02</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/AI-Aland-poster.png" alt="uxui2"></a>
+            <span class="num"><em>02</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-cafelatte-poster.jpg" alt="uxui2"></a>
             <div class="desc-box">
-              <h3 class="item_title">yes24</h3>
-              <span class="date">2024.10.21</span>
-              <p class="desc">Position Attachment, Slide</p>
+              <h3 class="item_title">poster design</h3>
+              <span class="date">2024.11</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- 청와대 3-->
           <article class="uxui__item">
-            <span class="num"><em>03</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/AI-festival-poster.png" alt="uxui2"></a>
+            <span class="num"><em>03</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-nightcity-poster.jpg" alt="uxui3"></a>
             <div class="desc-box">
-              <h3 class="item_title">청와대</h3>
-              <span class="date">2024.10.10</span>
-              <p class="desc">Position Attachment, Slide</p>
+              <h3 class="item_title">poster design</h3>
+              <span class="date">2024.11</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- 청와대 4-->
           <article class="uxui__item">
-            <span class="num"><em>04</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/AI-fleamarket-poster.png" alt="uxui4"></a>
+            <span class="num"><em>04</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-sale-cardnews.png" alt="uxui4"></a>
             <div class="desc-box">
-              <h3 class="item_title">mamonde</h3>
-              <span class="date">2024.10.07</span>
-              <p class="desc">Position Attachment, Slide</p>
+              <h3 class="item_title">cardnews <br> design</h3>
+              <span class="date">2024.10</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- Innisfree 5-->
           <article class="uxui__item">
-            <span class="num"><em>05</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/AI-소모임-cardnews.png" alt="uxui5"></a>
+            <span class="num"><em>05</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/AI-Aland-poster.png" alt="uxui5"></a>
             <div class="desc-box">
-              <h3 class="item_title">Innisfree</h3>
-              <span class="date">2024.09.25</span>
-              <p class="desc"> Accordion Menu, Slide</p>
+              <h3 class="item_title">poster design</h3>
+              <span class="date">2024.10</span>
+              <p class="desc"> Illustrator 활용</p>
             </div>
           </article>
           <!-- Lush 6-->
           <article class="uxui__item">
-            <span class="num"><em>06</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-cafe-poster.png" alt="uxui6"></a>
+            <span class="num"><em>06</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/AI-fleamarket-poster.png" alt="uxui6"></a>
             <div class="desc-box">
-              <h3 class="item_title">Lush</h3>
-              <span class="date">2024.09.23</span>
-              <p class="desc"> Tab, Slide</p>
+              <h3 class="item_title">poster <br> design</h3>
+              <span class="date">2024.09</span>
+              <p class="desc"> Illustrator 활용</p>
             </div>
           </article>
           <!-- 롯데칠성음료 7-->
           <article class="uxui__item">
-            <span class="num"><em>07</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-cafelatte-poster.jpg" alt="uxui7"></a>
+            <span class="num"><em>07</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/AI-festival-poster.png" alt="uxui7"></a>
             <div class="desc-box">
-              <h3 class="item_title">롯데칠성음료</h3>
-              <span class="date">2024.09.19</span>
-              <p class="desc"> getAttribute, Transform, Slide</p>
+              <h3 class="item_title">poster design</h3>
+              <span class="date">2024.09</span>
+              <p class="desc"> Illustrator 활용</p>
             </div>
           </article>
           <!-- Mugo box 8-->
           <article class="uxui__item">
-            <span class="num"><em>08</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-nightcity-poster.jpg" alt="uxui8"></a>
+            <span class="num"><em>08</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-zero-poster.png" alt="uxui8"></a>
             <div class="desc-box">
-              <h3 class="item_title">Mugo box</h3>
+              <h3 class="item_title">poster design</h3>
               <span class="date">2024.09.10</span>
-              <p class="desc"> getAttribute, Transform, Slide</p>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- wodamlighting 9 -->
           <article class="uxui__item">
-            <span class="num"><em>09</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-haribo-poster.png" alt="uxui9"></a>
+            <span class="num"><em>09</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/AI-3d-cardnews.png" alt="uxui9"></a>
             <div class="desc-box">
-              <h3 class="item_title">wodam</h3>
-              <span class="date">2024.09.09</span>
-              <p class="desc"> animate </p>
+              <h3 class="item_title">cardnews <br> design</h3>
+              <span class="date">2024.08</span>
+              <p class="desc"> Illustrator 활용 </p>
             </div>
           </article>
           <!-- wannerbros 10 -->
           <article class="uxui__item">
-            <span class="num"><em>10</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-prada-poster.jpg" alt="uxui10"></a>
+            <span class="num"><em>10</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/AI-소모임-cardnews.png" alt="uxui10"></a>
             <div class="desc-box">
-              <h3 class="item_title">wanner <br> bros</h3>
-              <span class="date">2024.09.03</span>
-              <p class="desc"> animate </p>
+              <h3 class="item_title">cardnews <br> design</h3>
+              <span class="date">2024.07</span>
+              <p class="desc"> Illustrator 활용 </p>
             </div>
           </article>
           <!-- Gentle 11 -->
           <article class="uxui__item">
-            <span class="num"><em>11</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-sale-cardnews.png" alt="uxui2"></a>
+            <span class="num"><em>11</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-cafe-poster.png" alt="uxui2"></a>
             <div class="desc-box">
-              <h3 class="item_title">Gentle <br> monster</h3>
-              <span class="date">2024.08.27</span>
-              <p class="desc">Position Attachment, Slide</p>
+              <h3 class="item_title">poster <br> design</h3>
+              <span class="date">2024.07</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
           <!-- Apple 12 -->
           <article class="uxui__item">
-            <span class="num"><em>12</em>/13</span>
-            <a href="#"><img src="./src/assets/graphic/PS-zero-poster.png" alt="uxui9"></a>
+            <span class="num"><em>12</em>/12</span>
+            <a href="#"><img src="./src/assets/graphic/PS-haribo-poster.png" alt="uxui9"></a>
             <div class="desc-box">
-              <h3 class="item_title">Apple</h3>
-              <span class="date">2024.08.13</span>
-              <p class="desc"> Class Control </p>
+              <h3 class="item_title">poster <br> design</h3>
+              <span class="date">2024.06</span>
+              <p class="desc">photoshop 활용</p>
             </div>
           </article>
         </div>
@@ -476,7 +475,7 @@
           <div class="bubble x10"></div>
           <div class="bubble bubble2 x11"></div>
           <div class="bubble bubble2 x12"></div>
-          <div class="bubble bubble2 x13"></div>
+          <div class="bubble bubble2 x12"></div>
           <div class="bubble bubble2 x14"></div>
           <div class="bubble bubble2 x15"></div>
           <div class="bubble bubble2 x16"></div>
@@ -486,7 +485,7 @@
         </div>
       </section>
       <!-- about -->
-      <section id="about" data-bg="#00223F">
+      <section id="about" data-bg="linear-gradient(to top left, #7ED0FB, #003058)">
 
         <div class="about_wrap">
           <div class="txt">
@@ -542,7 +541,7 @@
                   <em>2023.04 ~ 2024.04</em> <span>제주MBC FD</span>
                 </li>
                 <li class="Career">
-                  <em>2020 ~ 2013</em> <span>제주대학교 관광경영전공</span>
+                  <em>2020 ~ 2012</em> <span>제주대학교 관광경영전공</span>
                 </li>
                 <li class="Career">
                   <em>2017 ~ 2019</em> <span>제주한라대학교 중국어전공</span>
@@ -593,7 +592,7 @@
           <div class="bubble x10"></div>
           <div class="bubble bubble2 x11"></div>
           <div class="bubble bubble2 x12"></div>
-          <div class="bubble bubble2 x13"></div>
+          <div class="bubble bubble2 x12"></div>
           <div class="bubble bubble2 x14"></div>
           <div class="bubble bubble2 x15"></div>
           <div class="bubble bubble2 x16"></div>
@@ -642,7 +641,7 @@
         <div class="bubble x10"></div>
         <div class="bubble bubble2 x11"></div>
         <div class="bubble bubble2 x12"></div>
-        <div class="bubble bubble2 x13"></div>
+        <div class="bubble bubble2 x12"></div>
         <div class="bubble bubble2 x14"></div>
         <div class="bubble bubble2 x15"></div>
         <div class="bubble bubble2 x16"></div>
@@ -656,52 +655,9 @@
 
 
   <script src="./src/js/splitText.js"></script> <!-- home -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/MotionPathPlugin.min.js"></script> <!-- path -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> <!-- swiper -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script> <!-- gsap -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script> <!-- bg-color -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> <!-- bg-color -->
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script> <!-- splide / work scroll -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollSmoother.min.js"></script>
-
-    <script
-    src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script> 
-    <!-- splide -->
-
-  <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
-  <!-- lenis -->
-
-
-
+ 
   <script type="module" src="/main.js"></script>
 
-  <!-- path -->
-  <script>
-    gsap.registerPlugin(MotionPathPlugin, ScrollTrigger)
-
-    // 비스크롤 무한 반복 애니메이션
-    gsap.to('.jellyfish1', {
-      scale: 1.1,    // 크기 변화
-      duration: 8,
-      repeat: -1,
-      repeatDelay: 1,  // 반복 간 지연 시간 (필요시)
-      yoyo: true,    // 반복 시 원래 상태로 돌아가기
-      ease: "power1.inOut",
-
-      motionPath: {
-        path: '.path',       // SVG 경로 선택자
-        align: '.path',      // 경로에 정렬
-        // autoRotate: true,    // 경로에 따라 회전
-        alignOrigin: [0.5, 0.5] // 중심 정렬
-      },
-
-
-    });
-
-  </script>
 
 
 </body>
