--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <nav class="header_nav" role="navigation" aria-label="메인메뉴">
         <ul>
-          <li><a href="#home">home</a></li>
+          <li><a class="on" href="#home">home</a></li>
           <li><a href="#project">project</a></li>
           <li><a href="#work">work</a></li>
           <li><a href="#uxui">uxui</a></li>
@@ -81,7 +81,7 @@
         </div>
       </section>
       <!-- project -->
-      <section id="project" data-bg="linear-gradient(to bottom, #2A8AC2, #046BA9)">
+      <section id="project" data-bg="linear-gradient(to bottom, #2A8AC3, #046BA9)">
         <div class="jellyfish jellyfish2">
           <img src="./src/assets/images/jellyfish2.png" alt="jellyfish2">
         </div>
@@ -606,28 +606,26 @@
       <div class="title footer_title">
         contact
       </div>
+      
       <div class="stage">
-        <!-- <h2>With Me</h2> -->
-        <div class="desc">
-            <div class="text">도전과 성장 </div>
-            <div class="text">끊임없는 자기개발</div>
-            <div class="text">다양한 경험을 통해 빠르게 배우고</div>
-            <div class="text">효율적인 방법으로 문제를 해결하여</div>
-            <div class="text">변화에 유연하게 대응하는 인재가 될 자신이 있습니다. </div>
-            <div class="text">감사합니다 </div>
+        <div class="textField">
+          <div class="big"></div>
+          <div class="cusor"></div>
         </div>
-    </div>
-    <div class="splide">
-      <div class="footer__splide__track">
-        <ul class="splide__list">
+      </div>
+
+      <div id="wsplide">
+        <div class="splide__track">
+          <ul class="splide__list">
             <li class="splide__slide"> acebed<img src="./img/jellyfish-3-svgrepo-com.svg" alt=""></li>
             <li class="splide__slide"> 3ce <img src="./img/sea-2-svgrepo-com.svg" alt=""></li>
             <li class="splide__slide">apple <img src="./img/sea-turtle-svgrepo-com.svg" alt=""></li>
             <li class="splide__slide">wodamlighting <img src="./img/sea-star-svgrepo-com.svg" alt=""></li>
             <li class="splide__slide">gentlemonster <img src="./img/sea-svgrepo-com.svg" alt=""></li>
-        </ul>
+          </ul>
+        </div>
       </div>
-    </div>
+
       <div class="bubble_cont">
         <div class="bubble x1"></div>
         <div class="bubble x2"></div>
@@ -651,11 +649,7 @@
       </div>
     </footer>
   </div>
-
-
-
   <script src="./src/js/splitText.js"></script> <!-- home -->
- 
   <script type="module" src="/main.js"></script>
 
 
