1차 모듈처리

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           <!-- wannerbros 10 -->
           <article class="uxui__item">
             <span class="num"><em>10</em>/12</span>
-            <a href="#"><img src="./src/assets/graphic/AI-소모임-cardnews.png" alt="uxui10"></a>
+            <a href="#"><img src="./src/assets/graphic/AI-cardnews.png" alt="uxui10"></a>
             <div class="desc-box">
               <h3 class="item_title">cardnews <br> design</h3>
               <span class="date">2024.07</span>
@@ -613,19 +613,26 @@
           <div class="cusor"></div>
         </div>
       </div>
-
-      <div id="wsplide">
-        <div class="splide__track">
-          <ul class="splide__list">
-            <li class="splide__slide"> acebed<img src="./img/jellyfish-3-svgrepo-com.svg" alt=""></li>
-            <li class="splide__slide"> 3ce <img src="./img/sea-2-svgrepo-com.svg" alt=""></li>
-            <li class="splide__slide">apple <img src="./img/sea-turtle-svgrepo-com.svg" alt=""></li>
-            <li class="splide__slide">wodamlighting <img src="./img/sea-star-svgrepo-com.svg" alt=""></li>
-            <li class="splide__slide">gentlemonster <img src="./img/sea-svgrepo-com.svg" alt=""></li>
-          </ul>
+<div class="slide-container ">
+  
+        <div class="splide ltl" id="splide1">
+          <div class="splide__track splide__track-1">
+            <ul class="splide__list">
+              <li class="splide__slide">About</li>
+              <li class="splide__slide">Me</li>
+              <li class="splide__slide"><img src="src/img/arrow1.svg" alt=""></li>
+              <li class="splide__slide">About</li>
+              <li class="splide__slide">Me</li>
+              <li class="splide__slide"><img src="src/img/arrow1.svg" alt=""></li>
+              <li class="splide__slide">About</li>
+              <li class="splide__slide">Me</li>
+              <li class="splide__slide"><img src="src/img/arrow1.svg" alt=""></li>
+  
+            </ul>
+          </div>
         </div>
-      </div>
-
+         
+</div>
       <div class="bubble_cont">
         <div class="bubble x1"></div>
         <div class="bubble x2"></div>
