1차 모듈 처리

--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
       </div>
     </footer>
   </div>
-  <script src="./src/js/splitText.js"></script> <!-- home -->
+  <!-- <script src="./src/js/splitText.js"></script>  -->
   <script type="module" src="/main.js"></script>
 
 
